[package]
name = "brainfuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false

[dependencies]
dict = "0.1.5"
console = "0.15.2"
clap = { version = "4.0.18", features = ["derive"] }
